meteor/client/styles/shelf/dashboard.scss
@import "../colorScheme";
@import "../itemTypeColors";

$dashboard-button-width: 6.40625em;
$dashboard-button-height: 5.625em;

.dashboard {
	position: absolute;
	top: 2px;
	left: 2px;
	bottom: 2px;
	right: 2px;
	overflow: auto;

	--dashboard-button-grid-width: 1.875em;
	--dashboard-button-grid-height: 1.625em;
	--dashboard-panel-margin-width: 0.938em;
	--dashboard-panel-margin-height: 2.750em;
}

.dashboard-panel {
	position: absolute;
	background: rgba(0, 0, 0, 0.2);
	border: 1px solid rgba(0,0,0,0.1);
	border-radius: 5px;
	padding: 0.625rem;
	margin: 0.625rem;
	user-select: none;

	&.dashboard-panel--actions {
		background-color: none !important;
		background: none !important;
		border-color: transparent;
		box-shadow: none;
		pointer-events: none;
		margin-top: 0.5555555555555555555em;
		z-index: 10;

		> .dashboard-panel__panel {
			max-height: none;
			overflow: visible;
			background-color: none !important;
			background: none !important;
			border: none !important;
			height: calc(100% + 8px);

			> .dashboard-panel__panel__button {
				pointer-events: visible;
			}

			> .dashboard-panel__panel__button--standalone {
				&.type--take {
					background-color: $general-live-color;
				}

				width: calc(100% - 8px);
				height: calc(100% - 8px);

				&.active {
					background-color: #761912;
				}

				&.active.rehearsal {
					background-color: #CBCCCD;
				}
			}
		}
	}

	.dashboard-panel__header {
		margin: 0 0 0.625rem;
		padding: 0;
		white-space: nowrap;
		overflow: hidden;
		text-overflow: ellipsis;
		line-height: 1.1em;
	}

	> .adlib-panel__list-view__toolbar {
		grid-column: list-view / end;
		grid-row: tool-bar / list-view;

		&--no-segments {
			grid-column: template-list / end;
		}

		display: flex;
		padding: 0.625rem 0.313rem;

		> .adlib-panel__list-view__toolbar__filter {
			flex: 2 2;
			max-width: 25rem;
			position: relative;

			> .adlib-panel__list-view__toolbar__filter__input {
				width: 100%;
				background: #2D2D2D;
				border: 1px solid #424242;
				border-radius: 2em;
				box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5) inset, 1px 1px 2px rgba(0, 0, 0, 0.2);
				line-height: 1.8em;
				padding: 0 1em;
				color: #fff;

				&:hover, &:focus {
					background: #3b3b3b;
					transition: 0.2s background-color;
				}
			}

			> .adlib-panel__list-view__toolbar__filter__clear {
				position: absolute;
				right: 1em;
				top: 0.4em;
				opacity: 0.3;
				cursor: pointer;

				&:hover {
					opacity: 0.7;
				}
			}
		}

		> .adlib-panel__list-view__toolbar__buttons {
			flex: 1 1;
			text-align: right;

			> button {
				padding: 0 0.5em;
				font-size: 1.3em;
				opacity: 0.5;

				&.active {
					opacity: 1;
				}
			}
		}
	}

	.dashboard-panel__panel {
		font-size: 0.8em;
		margin: -4px;
		overflow: auto;
		max-height: calc(100% - 12px);
		
		&.dashboard-panel__panel--horizontal {
			white-space: nowrap;
			overflow: auto;
		}
	}

	.dashboard-panel__panel__group {
		display: contents;

		.dashboard-panel__panel__group__liveline {
			display: inline-block;
			position: relative;
			margin-right: -2px;
			width: 2px;
			height: 6em;
			margin-bottom: -1em;
			z-index: 2;
			transform: translate(calc(-1 * #{$dashboard-button-width}), 0);
			
			&::after {
				content: ' ';
				display: block;
				position: absolute;
				background: var(--general-live-color);
				top: 0;
				left: 0;
				right: 0;
				bottom: 0;
				transform: translate(calc(#{$dashboard-button-width} + -1px), 0);
			}

			&::before {
				content: ' ';
				display: block;
				position: absolute;
				top: 0;
				left: 2px;
				border-left: 10px solid var(--general-live-color);
				border-bottom: 10px solid transparent;
				border-top: 10px solid transparent;
				border-right: 10px solid transparent;
				transform: translate(calc(#{$dashboard-button-width} + -1px), 0);
			}
		}

		&.next {
			.dashboard-panel__panel__group__liveline {
				&::after {
					background: var(--general-next-color);
				}
				&::before {
					border-left-color: var(--general-next-color);
				}
			}
		}

		&.live {
			.dashboard-panel__panel__group__liveline {
				&::after {
					background: var(--general-live-color);
				}
				&::before {
					border-left-color: var(--general-live-color);
				}
			}
		}
	}

	.dashboard-panel__panel__button {
		display: inline-flex;
  		align-items: flex-end;
		position: relative;
		background: #000;
		border: none;
		border-radius: 3px;
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: normal;
		line-break: loose;
		word-break: break-all;
		width: $dashboard-button-width;
		height: $dashboard-button-height;
		border: none;
		margin: 4px;
		vertical-align: top;
		cursor: pointer;

		@include item-type-colors();
		@include invalid-overlay();
		@include missing-overlay();

		&.live {
			@keyframes button-flash {
				0% {
					opacity: 1;
				}
				50% {
					opacity: 1;
				}
				50.001% {
					opacity: 0;
				}
				100% {
					opacity: 0;
				}
			}

			&::before {
				content: ' ';
				display: block;
				position: absolute;
				top: 0;
				left: 0;
				bottom: 0;
				right: 0;
				background: rgba(255, 255, 255, 0.3);
				z-index: 10;
				// animation: 2s button-flash normal infinite;
			}
		}

		&:focus {
			outline: none;
			box-shadow: none;
		}

		&:active {
			&::before {
				content: ' ';
				display: block;
				position: absolute;
				top: 0;
				left: 0;
				bottom: 0;
				right: 0;
				background: rgba(0, 0, 0, 0.2);
				z-index: 10;
			}
		}

		> .dashboard-panel__panel__button__label {
			position: absolute;
			
			vertical-align: bottom;
			max-height: calc(100% - 4px);

			left: 4px;
			max-width: calc(100% - 8px);
			text-align: left;
			hyphens: auto;
			-webkit-hyphens: auto;
			-ms-hyphens: auto;
			text-transform: uppercase;
			font-weight: 400;
			text-shadow: 1px 1px 0 rgba(0,0,0,0.3);
			z-index: 2;
		}

		> .dashboard-panel__panel__button__thumbnail {
			position: absolute;
			top: 0;
			left: 0;
			right: 0;
			height: auto;
			z-index: 1;
		}

		> .dashboard-panel__panel__button__sub-label {
			position: absolute;
			top: 2px;
			right: 4px;
			font-size: 8px;
			text-shadow: 1px 1px 0 rgba(0,0,0,0.5);
			z-index: 2;
		}

		> svg {
			position: absolute;
			top: 0;
			left: 0;
			height: 100%;
			width: 100%;
		}

		&.list {
			height: 2.4em;
			align-items: center;
			font-size: 16px;
			border: 2px solid transparent;

			> .dashboard-panel__panel__button__sub-label {
				font-size: 22px;
				top: auto;
			}

			&.vt, &.live-speak, &.transition, &.splits {
				> .dashboard-panel__panel__button__label {
					left: 75px;
				}
			} 

			> .dashboard-panel__panel__button__thumbnail {
				height: 100%;
				right: auto;
			}

			> .video-preview {
				position: relative;
				overflow: hidden;
				background: #000;
				height: 100%;
				width: 67px;
	
				> .background {
					position: absolute;
					top: 0;
					bottom: 0;
					left: 0;
					right: 0;
				}
	
				> .box {
					position: absolute;
					transform: translate(-50%, -50%);
				}
	
				& > * {
					@include item-type-colors();
				}
			}

			&.selected {
				border-color: var(--general-next-color);
			}
		}
	}

	&.dashboard-panel--take {
		display: flex;
		flex-direction: column;

		> .dashboard-panel__panel {
			flex: 1;
			
		}

		> .dashboard-panel__buttons {
			display: flex;
			margin-top: 0.625rem;
			
			> .dashboard-panel__panel__button {
				flex: 1;
				background: var(--general-live-color);
				height: 3em;
				align-items: center;

				> .dashboard-panel__panel__button__label {
					width: 100%;
					text-align: center;
					font-size: 1.4em;
				}
			}
		}
	}
}

